1.0.1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Fixed unreported bug: ezcConsoleOutput::toPos() fixed typo in parameter.
- Fixed unreported bug: ezcConsoleOption::__construct() still threw old
  exception style. Now throws correct ezcConsoleInvalidOptionNameException on
  an invalid option name.


1.0 - Monday 30 January 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed unreported bug: ezcConsoleTableOptions struct caried deprecated
  options and missed 2 in its constructor.
- Fixed unreported bug: Option values not properly checked for eczConsoleTable,
  ezcConsoleOutput.
- Fixed unreported bug: ezcConsoleProgressbarOptions disallowed option
  read access.
- Fixed unreported bug: ezcConsoleTable "colWrap" option not recognized
  correctly.
- Fixed unreported bug: ezcConsoleTable "defaultFormat" and
  "defaultBorderFormat" not recognized.
- Fixed notice in ezcConsoleOptionExclusionViolationException.


1.0rc1 - Monday 16 January 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added redrawFrequency option to ezcConsoleProgressbar to allow less redraws
  than advance() is called. This allows the progress measuring of huge numbers
  without redrawing the bar each time advance() is called.
- Added setOptions() method to ezcConsoleOutput, ezcConsoleTable,
  ezcConsoleProgressbar and ezcConsoleStatusbar.

- Changed exception behavior. All errors will now throw a different exception
  class.
- Changed default progressbar size to 78 characters (standard console width).
- Changed submission of options to ezcConsoleOutput, ezcConsoleTable,
  ezcConsoleProgressbar and ezcConsoleStatusbar to be an array.
- Changed value "step" to be an option in ezcConsoleProgressbar with default
  value = 1 (was a setting before).
- Changed "successChar" and "failureChar" to be options in
  ezcConsoleStatusbar (were properties before).